--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 header {
     height: 400px;
-    background-image: url(images/header-bg.png);
+    background-image: url(../images/header-bg.png);
     background-position: center;
 }
 footer {
