--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,23 @@ header {
 footer {
     height: 200px;
 }
+menu {
+    margin: 0px;
+}
+.back-black-opacity {
+            background-color: rgba(0, 0, 0, 0.8);
+}
+.fixed {
+    position: fixed;
+}
+@media (max-width: 1100px) {
+    p {
+        margin: 0px;
+    }
+}
+@media (prefers-color-scheme: dark) {
+    body {
+        background-color: hsl(0, 0%, 20%);
+        color: black !important;
+    }
+}
