--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,6 @@ header {
     background-image: url(../images/header-bg.png);
     background-position: center;
 }
-footer {
-    height: 200px;
-}
 menu {
     margin: 0px;
     
@@ -43,4 +40,10 @@ menu {
 }
 img {
     min-width: 40px;
+}
+.logo {
+    height: 72px;
+}
+a {
+    text-decoration: none;
 }
