--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ header {
 }
 menu {
     margin: 0px;
-    
 }
 @media (max-width: 993px) {
     aside {
@@ -21,7 +20,7 @@ menu {
         right: 0px;
         padding: 0px !important;
         background-color: white !important;
-        
+        z-index: 2;
     }
     aside.show-sidebar {
         display: block;
@@ -46,4 +45,9 @@ img {
 }
 a {
     text-decoration: none;
+}
+@media (max-width: 600px) {
+    img {
+        max-width: 300px;
+    }
 }
